@@ -25,6 +25,7 @@ DateTime::Format::Strptime = 1.4000
 MIME::Base64::URLSafe = 0.01
 Digest::SHA = 5.47
 URI::Encode = 0.02
+Exception::Class = 1.32
 
 [MetaNoIndex]
 folder = author.t
