@@ -3,6 +3,7 @@ package Facebook::Graph::AccessToken::Response;
 use Any::Moose;
 use URI;
 use URI::QueryParam;
+use Facebook::Graph::Exception;
 
 has response => (
     is      => 'ro',
@@ -19,7 +20,14 @@ has token => (
             return URI->new('?'.$response->content)->query_param('access_token');
         }
         else {
-            confess [$response->code, 'Could not fetch access token: '.$response->message]
+            Facebook::Graph::Exception::RPC->throw(
+                error               => 'Could not fetch access token: '.$response->message,
+                uri                 => $response->request->uri->as_string,
+                http_code           => $response->code,
+                http_message        => $response->message,
+                facebook_message    => 'Could not fetch access token.',
+                facebook_type       => 'None',
+            );
         }
     }
 );
@@ -34,7 +42,14 @@ has expires => (
             return URI->new('?'.$response->content)->query_param('expires');
         }
         else {
-            confess [$response->code, 'Could not fetch access token: '.$response->message]
+            Facebook::Graph::Exception::RPC->throw(
+                error               => 'Could not fetch access token: '.$response->message,
+                uri                 => $response->request->uri->as_string,
+                http_code           => $response->code,
+                http_message        => $response->message,
+                facebook_message    => 'Could not fetch access token.',
+                facebook_type       => 'None',
+            );
         }
     }
 );
